CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( surface )

# 增加PCL库的依赖
set (PCL_DIR /home/long/depend/pcl-pcl-1.8.1/build)
FIND_PACKAGE( PCL REQUIRED)
set (CMAKE_CXX_STANDARD 11)

# 添加头文件和库文件
ADD_DEFINITIONS( ${PCL_DEFINITIONS} )
INCLUDE_DIRECTORIES( ${PCL_INCLUDE_DIRS}  )
LINK_LIBRARIES( ${PCL_LIBRARY_DIRS} )

ADD_EXECUTABLE( label label.cpp )
TARGET_LINK_LIBRARIES( label
    ${PCL_LIBRARIES} )
ADD_EXECUTABLE( unlabel unlabel.cpp )
TARGET_LINK_LIBRARIES( unlabel
    ${PCL_LIBRARIES} )
ADD_EXECUTABLE( crf crf.cpp )
TARGET_LINK_LIBRARIES( crf
    ${PCL_LIBRARIES} )